[gd_scene load_steps=18 format=3 uid="uid://cik30de5gaaah"]

[ext_resource type="Script" path="res://scenes/game/ingame_scene.gd" id="1_s0oxc"]
[ext_resource type="PackedScene" uid="uid://it8krv030uwn" path="res://scenes/game/playarea/play_area.tscn" id="4_6x0xm"]
[ext_resource type="PackedScene" uid="uid://bkk87o2ooo6at" path="res://ui/overlays/fade_overlay.tscn" id="4_dkp7h"]
[ext_resource type="AudioStream" uid="uid://fqdoir6qfwav" path="res://music/projectzodiac-smoothmainloop.mp3" id="5_5qqrv"]
[ext_resource type="AudioStream" uid="uid://cjh78fvm1xn6h" path="res://music/projectzodiac-smoothintro.mp3" id="5_7veen"]
[ext_resource type="PackedScene" uid="uid://jyv4g54adkmo" path="res://ui/overlays/pause_overlay.tscn" id="5_kwkh4"]
[ext_resource type="FontFile" uid="uid://csjn7ryho7u8v" path="res://fonts/PixelatedEleganceRegular-ovyAA.ttf" id="10_0clc1"]
[ext_resource type="Script" path="res://scenes/game/score.gd" id="15_wud1j"]
[ext_resource type="FontFile" uid="uid://d3gm5h1sk3aow" path="res://fonts/tetris.ttf" id="17_y720u"]
[ext_resource type="Texture2D" uid="uid://dl28ilcyykosx" path="res://visualassets/Tetris Background grayscale.png" id="18_o52xn"]

[sub_resource type="Theme" id="Theme_vvnv4"]
default_font = ExtResource("17_y720u")

[sub_resource type="Animation" id="Animation_eps2t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TetrisBackgroundGrayscale:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.288518, 0.288518, 0.288518, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TetrisBackgroundGrayscale:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0.748302, 0.850512, 1)]
}

[sub_resource type="Animation" id="Animation_gspw8"]
resource_name = "background_idle"
length = 20.0
loop_mode = 1
step = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TetrisBackgroundGrayscale:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.47451, 0.47451, 0.47451, 1), Color(1.15514e-06, 0.507043, 0.614121, 1), Color(0.286016, 0.379101, 1, 1), Color(0.676758, 0.00330042, 0.956334, 1), Color(0.788073, 0.000296293, 0.739309, 1), Color(0.870416, 0, 0.404711, 1), Color(0.784683, 0.304151, 0.0505023, 1), Color(0.548268, 0.418935, 9.62615e-08, 1), Color(0.453561, 0.522096, 5.77569e-07, 1), Color(5.05373e-07, 0.541398, 0.344586, 1), Color(0.473976, 0.473976, 0.473976, 1)]
}

[sub_resource type="Animation" id="Animation_7m3f3"]
resource_name = "game_pause"
step = 2.0

[sub_resource type="Animation" id="Animation_egk88"]
resource_name = "game_start"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TetrisBackgroundGrayscale:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 0.31864),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.47451, 0.47451, 0.47451, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TetrisBackgroundGrayscale:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.47451, 0.47451, 0.47451, 1)]
}

[sub_resource type="Animation" id="Animation_75fpl"]
resource_name = "score_flash"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TetrisBackgroundGrayscale:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.25, 0.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.47451, 0.47451, 0.47451, 1), Color(1, 1, 1, 1), Color(0.552956, 0.552956, 0.552956, 1), Color(0.400698, 0.400698, 0.400698, 1), Color(0.223103, 0.223103, 0.223103, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_833s5"]
_data = {
"RESET": SubResource("Animation_eps2t"),
"background_idle": SubResource("Animation_gspw8"),
"game_pause": SubResource("Animation_7m3f3"),
"game_start": SubResource("Animation_egk88"),
"score_flash": SubResource("Animation_75fpl")
}

[node name="IngameScene" type="Node2D"]
script = ExtResource("1_s0oxc")

[node name="UI" type="CanvasLayer" parent="."]

[node name="FadeOverlay" parent="UI" instance=ExtResource("4_dkp7h")]
unique_name_in_owner = true
visible = false

[node name="PauseOverlay" parent="UI" instance=ExtResource("5_kwkh4")]
unique_name_in_owner = true
process_mode = 2
visible = false

[node name="PlayArea" parent="." instance=ExtResource("4_6x0xm")]
position = Vector2(21, 25)
scale = Vector2(0.48, 0.48)

[node name="IntroMusic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_7veen")
volume_db = -8.0
autoplay = true
bus = &"Music"

[node name="LoopMusic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_5qqrv")
volume_db = -8.0
bus = &"Music"

[node name="Score" type="Node2D" parent="."]
script = ExtResource("15_wud1j")

[node name="HUD" type="Node2D" parent="Score"]

[node name="Label" type="RichTextLabel" parent="Score/HUD"]
top_level = true
offset_left = 473.0
offset_top = 32.0
offset_right = 561.0
offset_bottom = 70.0
theme = SubResource("Theme_vvnv4")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/normal_font = ExtResource("10_0clc1")
bbcode_enabled = true
fit_content = true
autowrap_mode = 2

[node name="ScoreAnimations" type="AnimationPlayer" parent="Score"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_833s5")
}

[node name="TetrisBackgroundGrayscale" type="Sprite2D" parent="."]
modulate = Color(0, 0.748302, 0.850512, 1)
self_modulate = Color(0.288518, 0.288518, 0.288518, 1)
show_behind_parent = true
position = Vector2(288.5, 162.5)
scale = Vector2(0.18592, 0.227083)
texture = ExtResource("18_o52xn")

[node name="BackgroundAnimations" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_833s5")
}

[connection signal="PoppedBubbles" from="PlayArea" to="Score" method="_on_play_area_popped_bubbles"]
